packages/editframe-styles/src/Create.module.scss
.root {
    // Hide button label depending on size and number of children
    @for $i from 1 through 10 {
        &:global(.sizer#{$i}) {
            & button:first-child:nth-last-child(#{$i}) > span, & button:first-child:nth-last-child(#{$i}) ~ button > span {
                display: none;
            }
        }
    }

    position: absolute;

    display: flex;
    flex-wrap: nowrap;
    justify-content: center;
    align-items: center;

    // Hide container if there is no children
    &:empty {
        display: none;
    }

    &.insertionPoint.isNotEmpty::before {
        content: "";

        position: absolute;

        top: 0;
        bottom: 0;

        z-index: -1;

        width: 100%;
        height: 1px;

        margin: auto;

        background: var(--moon-color-gray20);
    }

    &.isEmpty {
        background: var(--moon-color-gray_light_plain20);
    }

    & button {
        z-index: 10000;

        overflow: hidden;

        margin: 0 4px;

        & > svg {
            flex: 0 0 auto;
        }

        & > span {
            flex: unset;
        }
    }

    &.insertionPoint.insertionPoint.insertionPoint.isNotEmpty button {
        width: var(--moon-spacing-big);

        border-radius: var(--moon-spacing-nano);
    }
}

:global(.noprefix) .dropTarget {
    &::after {
        display: inline-block;
        width: 100%;
        height: 50px;

        border: 2px dashed gray;
        content: "";
    }
}

